--- a/textutils/package.json
+++ b/textutils/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "newsmonkey",
+  "name": "textutils",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
-    "react-top-loading-bar": "^2.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
